docker-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-diffusion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stable-diffusion
  template:
    metadata:
      labels:
        app: stable-diffusion
    spec:
      containers:
        - name: stable-diffusion
          image: deadlydoc/stable-diffusion
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
