docker-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: stable-diffusion
                port:
                  number: 5000
            path: /
            pathType: Prefix
#
# Your ingress rules here
#
---
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion
spec:
  type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: stable-diffusion
